Fix letter-spacing for 'button' block

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -14,7 +14,7 @@
   font-weight: 700;
   font-size: 0.75rem;
   line-height: 1.333;
-  letter-spacing: inherit;
+  letter-spacing: 0.01em;
   text-align: center;
   text-decoration: none;
   vertical-align: top;
